Bug 94485 - VIEWING: broken UI and spreadsheet display issue after opening specific .xlsm
Summary: VIEWING: broken UI and spreadsheet display issue after opening specific .xlsm
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2015-09-24 12:20 UTC by rndchars
Modified: 2016-10-25 19:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (367.35 KB, image/jpeg)
2015-09-24 12:22 UTC, rndchars
Details
"bad" xlsm file (4.86 MB, application/vnd.ms-excel.sheet.macroEnabled.12)
2015-09-25 09:15 UTC, rndchars
Details
File with filters only (664.58 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-10-22 13:46 UTC, ThierryT
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rndchars 2015-09-24 12:20:39 UTC
User-Agent:       Mozilla/5.0 (Windows NT 10.0; WOW64; rv:41.0) Gecko/20100101 Firefox/41.0
Build Identifier: LibreOffice 5.0.2.2

Sorry for my bad English.
Broken UI and spreadsheet display issue after opening specific .xlsm. I attached a screenshot.

Reproducible: Always

Steps to Reproduce:
1. Open attached xlsm file.
2. Click any menu in top of the window or open context menu.
3. Click "+"/"-" in spreadsheet.
Actual Results:  
Broken UI - menu items and dialogs (find/replace, save/not save when closing etc) are not displayed correctly but respond to a click.
Spreadsheet display issue - "+"/"-" not respond to a click.

Expected Results:  
Normal display of menu items and dialogs.
"+"/"-" must expand/collapse tree.

[Information automatically included from LibreOffice]
Locale: ru
Module: SpreadsheetDocument

OS: Windows 10 x64


Reset User Profile?Yes
Comment 1 rndchars 2015-09-24 12:22:08 UTC
Created attachment 118991 [details]
Screenshot
Comment 2 raal 2015-09-24 19:29:35 UTC
Please attach xlsm file
Comment 3 raal 2015-09-25 07:54:07 UTC Comment hidden (obsolete)
Comment 4 rndchars 2015-09-25 09:15:15 UTC
Created attachment 119018 [details]
"bad" xlsm file
Comment 5 rndchars 2015-09-25 09:16:26 UTC
I'm sorry, I forgot to attach the xlsm file.
Comment 6 raal 2015-09-26 17:03:09 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: 83ef294dddf3b1ab5cd5f91a792a7d9413a08f1f
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-09-20_07:00:46

I can not confirm with Version: 4.4.2.2, regression. 
I can open the file in excel2010 without problem.
Comment 7 ThierryT 2015-09-27 10:11:55 UTC
Hello,

I confirm the same problem with all the 5.0.x LibreOffice versions (I tested them) on my computer with an .ods file for Calc in which I have more than 6000 rows, colums filters and pivot tables.

I return back to the 4.4.5.2 version on which I have no problems.

Configuration :
Windows 8.1 x64
Java 1.8.60
Comment 8 raal 2015-09-30 06:18:48 UTC
This seems to have begun at the below commit.
Adding Cc: glogow@fbihome.de ; Could you possibly take a look at this
one? Thanks

author	Jan-Marek Glogowski <glogow@fbihome.de>	2015-03-06 18:11:31 (GMT)
committer	Jan-Marek Glogowski <glogow@fbihome.de>	2015-03-06 19:00:34 (GMT)
commit 9b4abcd1c45a646a1ac9120fe1c489ba6bb44e95 (patch)
Little build fix to Windows ScRefreshTimer
 3f4cc8db52a676c8bb37ebcf9996e73ef3240f0d is the first bad commit
commit 3f4cc8db52a676c8bb37ebcf9996e73ef3240f0d
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon May 25 22:26:52 2015 -0500

    source 9b4abcd1c45a646a1ac9120fe1c489ba6bb44e95

    source 9b4abcd1c45a646a1ac9120fe1c489ba6bb44e95
    source acaafc03e623ac25d4408605f34d50618926c5d0
    source 567f51192483059ec57c16a6045141746d4b01f9
    source ef6f2490a697e7c23fea40c567f751db05f1bbbf
    source 2c0189a8a3aeb3668bf6de1ea1958ba475b80a38
    source 3da65dc8982167517f19e80a288b049118bc3d23
    source 2a0b6705724c4ea65b56eb0f45bccfa253d9fdc2
    source 59619dbe971852d5cd35dcc3f78eda9bebeb99aa
    source e7c2b4b981b9b43c31fa442d5596b7a765dbe699
    source 6f4dc6af39ecf2f90155205ad097601a8b2f602c
    source ca3700c42238e71684ec1d5f5eacaea4b1ca3b30
    source 8da61f23384c7f3f2850a6362765506e4e078862
    source d05a64df34fd143670cb939b72abfb32d6b714c7
    source 01f406bc28f53acc5a2734af637aa8074a5d1813
    source b6bb2e9315c9bc3338eaf066df40a969eb4774aa
    source d851e1e3c29afd3315cc763144c6eb92fbef5054
    source 7e2a0df7e7b4551698d1d7172ef12ad1e0fd8826
    source b11dba5be288ca5aaed1403093033708f7091c42
    source 49439d4a67b06227e56a2855c856e3482323a28a
    source ff52f4e417eb4de5e85388a48a650429b1880762
    source d411dca1ea6bfccb7090d4ceab15119253cac5bf
    source f384496d125255a94bfd5978e0cbe44d6d046adb
    source f33d6800fbdc42aa75477e31be0bba5a4a5a52c1
    source 8f9b0c869222e57f738bc25d51cc6364e3c6a65a
    source 00717355c2d10bacbae46941b82247d74fd89108
    source 2d95bc0510d43c11bb3bd03f590e24ba3d7ca30f
    source ddd4a787ebde1b47e5ddfbd5995e2a0fe6b22ee2
    source 0e10b34342bd7b94b69f2eac8c9b1df89a2725f3
    source b380220bc1404ed5a9daa1a28f70696e84543f61
    source 5bd1106c3758c8cb0c19b09799970440501fde02
    source 3f64e7c16a63fdc330e108cd74182c615d229bb6
    source 4c3cea26b84cc70a67ff4eda99b842d8786a3628
    source 256c5c3f28ef70b70d38e2e07dfca4baab654612
    source 57656eb1fae5ae6c4d3b7542a385a93ff434e4e7
    source 49524c6dcf04b9dadef8d2b084cf26abcf70b8a9
    source 826143684d2697a8620373dce18fa5f24332d5cb
    source d8305248f687ffa522b56955508d82d60ad5b8c6
    source a74efa665c8199899cd778900de686e2b8710fee
    source e6e8a060ecc6e4fd51cfe88e00d841d546ed5915

:040000 040000 ad77b1a03396af9c8460d94e13cf1c28e5bf54bc dbf71bf6a72509169933f08eb57842c37a266627 M      instdir

 ~/bibisect-win32-5.0
$ git bisect log
# bad: [575cd25f0560684895018d8fcfb1818dd4dd1c9b] source ab465b90f6c6da5595393a0ba73f33a1e71a2b65
# good: [f449493ae11ac76cc7396bddeaa624a60c565936] source 57d6b92b69a31260dea0d84fcd1fc5866ada7adb
git bisect start 'libreoffice-5-0-branch-point' 'oldest'
# good: [da12357c491a0dce5acc0bd1f00c26f89d8f20e6] source c1b9402d49a7cd4bec383f28d397d9d89541f0e0
git bisect good da12357c491a0dce5acc0bd1f00c26f89d8f20e6
# bad: [2783cac5d1f18f44ce31f52eb7ae2f0ea17d0c96] source 5d7a203bdae1940e4846c4c42f5d733e4ffa4160
git bisect bad 2783cac5d1f18f44ce31f52eb7ae2f0ea17d0c96
# bad: [5367bd255f017a5d5cfc39ab0469ed23222ac3fc] source dbd2592ecb56a05a67ea58a06d2da6e1efc871f4
git bisect bad 5367bd255f017a5d5cfc39ab0469ed23222ac3fc
# bad: [1176baf1edcc59fd8ebf317babc4c36d2616d9ba] source 7d6ce7bad60fe939950655281c117f2329c60dec
git bisect bad 1176baf1edcc59fd8ebf317babc4c36d2616d9ba
# good: [1142c20f7b10c426c95c2fc3437db63dde661b0c] source 8d78888a0c62641284d5e5fbe42cb3b950e22683
git bisect good 1142c20f7b10c426c95c2fc3437db63dde661b0c
# bad: [a244102145885f5cddef62c88f909cbafd8f2e26] source 31df8a295e7c1be14a064e313ff623e1e4a7f8bb
git bisect bad a244102145885f5cddef62c88f909cbafd8f2e26
# bad: [72d371cd59289866129da57cf42dcb53520245af] source 0ef455bdc33356dcf00e3a2f724b2a18e15de38f
git bisect bad 72d371cd59289866129da57cf42dcb53520245af
# good: [f78f4c5bad65597c20d46f87cd2deefb50f07728] source 7d8cf47d62ca380d4b25c5c92e68ad25b951b06e
git bisect good f78f4c5bad65597c20d46f87cd2deefb50f07728
# good: [ecd6314be10c5f9438bb134758b51b4227e37e5d] source 6a3c5af4eb96d03110fcbc856c6920bfcf4063c7
git bisect good ecd6314be10c5f9438bb134758b51b4227e37e5d
# good: [e62767d1f8eba9cd92ca0e38a6d575f82d2ffb9c] source 3f6f21e6e7721bbca13c1e632c0247939538ba82
git bisect good e62767d1f8eba9cd92ca0e38a6d575f82d2ffb9c
# good: [332cd02d3af015fb9d4aafb7a4ab2b03223a5d5c] source 1028643bc7d294e4c32b4ccea288d90088abae53
git bisect good 332cd02d3af015fb9d4aafb7a4ab2b03223a5d5c
# bad: [3f4cc8db52a676c8bb37ebcf9996e73ef3240f0d] source 9b4abcd1c45a646a1ac9120fe1c489ba6bb44e95
git bisect bad 3f4cc8db52a676c8bb37ebcf9996e73ef3240f0d
# good: [530b8e51670c61234f332ecafa5d52b61be1547b] source 9e678c14e4fc8e58b1e0530744f648fa3958d338
git bisect good 530b8e51670c61234f332ecafa5d52b61be1547b
# first bad commit: [3f4cc8db52a676c8bb37ebcf9996e73ef3240f0d] source 9b4abcd1c45a646a1ac9120fe1c489ba6bb44e95
Comment 9 Julien Nabet 2015-10-12 20:01:04 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.

I don't reproduce this either with LO Debian package 5.0.2.2 (with SAL_USE_VCLPLUGIN=gtk3, gtk or gen)

Perhaps I missed something.

With master sources, I noticed these kinds of logs:
warn:legacy.osl:3017:1:oox/source/docprop/docprophandler.cxx:315: For now unexpected tags are ignored!
warn:legacy.osl:3017:1:oox/source/helper/graphichelper.cxx:117: GraphicHelper::GraphicHelper - cannot get target frame
warn:oox:3017:1:oox/source/vml/vmltextboxcontext.cxx:218: unhandled style property: mso-direction-alt
warn:legacy.osl:3017:1:filter/source/msfilter/msvbahelper.cxx:559: VBAMacroResolver::initialize - missing arguments
Comment 10 ThierryT 2015-10-22 13:46:35 UTC
Created attachment 119882 [details]
File with filters only
Comment 11 ThierryT 2015-10-22 13:54:28 UTC
Today I reloaded from the official website the LO x84 version
Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe-GL
Locale : fr-FR (fr_FR)

I install also the new Java x64 1.8.65 version on my Windows 8.1 x64.

I still have the problem on my computer with this new version of Java.

I joined also a simple file of my application with only the filters.

When I open the file, sometimes (not always), I have no displaying of the item menus from the MenuBar.

When I modify the filters (example column M -> filters to 'All'). After that when I want to display Item menus from the Menubar, I see nothing like the screenshot file.

I expect this will help you.
Comment 12 Jan-Marek Glogowski 2015-10-23 13:33:54 UTC
Hmm - my patch is just a fix for a linking problem on  Windows.

Now the range of 
  source 9b4abcd1c45a646a1ac9120fe1c489ba6bb44e95
  ..
  source e6e8a060ecc6e4fd51cfe88e00d841d546ed5915

Includes the idle timer merge, which has introduced some repaint problems in the past.

Actually LO consumes 100% CPU here, when opening the document. Running in valgrind shows, that most of the time is spend in Calcs SpellTimerHdl, which is scheduled with the REPAINT priority... and so races with GUI updates.

Will push a patch for master and 5.0 to lower the spell checkers prio.
Comment 13 Commit Notification 2015-10-23 13:40:32 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0db68ef9ca624cd0bda45c35c24a9abe106faf57

tdf#94485 Lower Calc background spellchecker prio

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 ThierryT 2015-10-25 11:08:58 UTC
Dear All,

Today I found under /daily/master/Win-x86_64@62-TDF the LibreOfficeDev 
Version: 5.1.0.0.alpha1+ (x64)
Build ID: a62bc6a65abb47adb0e4caff7e38823c15b302fc
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-10-24_23:49:43
Locale: fr-FR (fr_FR)

I tested it with my complete application and I confirmed that the screen bug is corrected with the Menubar items.
But with this version I have over crashes when I want to execute different macros with my personal MenuBar Items. 

I will stay with the 4.4 branch until we will have an official 5.1 version.
Comment 15 Commit Notification 2015-10-26 13:59:59 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=be4e0ce8a9de6b6c32aa7a7e157b2dbef74f215a&h=libreoffice-5-0

tdf#94485 Lower Calc background spellchecker prio

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-14 05:16:48 UTC Comment hidden (obsolete)