tdf#94485 Lower Calc background spellchecker prio

The Calc spell checker idle handler is currently running in the
REPAINT / MEDIUM priority class - much too high.

This races with the Calc GUI repaint for large documents, like
the one attached to tdf#94485.

So move it to the LOWER priority queue, to fix the lagging GUI.

Change-Id: I6e4b05dd1a977182ec13f7e3a05f0722f502f226